@@ -36,6 +36,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -44,7 +45,7 @@ import java.util.OptionalDouble;
 import java.util.OptionalInt;
 import java.util.OptionalLong;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static io.micronaut.inject.writer.BeanDefinitionVisitor.PROXY_SUFFIX;
 
@@ -102,6 +103,16 @@ public interface ClassElement extends TypedElement {
     }
 
     /**
+     * Is raw type.
+     * @return true if the type is raw
+     * @since 4.0.0
+     */
+    @Experimental
+    default boolean isRawType() {
+        return false;
+    }
+
+    /**
      * Tests whether one type is assignable to another.
      *
      * @param type The type to check
@@ -124,6 +135,7 @@ public interface ClassElement extends TypedElement {
 
     /**
      * Checks whether the bean type is a container type.
+     *
      * @return Whether the type is a container type like {@link Iterable}.
      * @since 4.0.0
      */
@@ -192,7 +204,7 @@ public interface ClassElement extends TypedElement {
 
     /**
      * Find and return a single primary constructor. If more than constructor candidate exists, then return empty unless a
-     * constructor is found that is annotated with either {@link io.micronaut.core.annotation.Creator} or {@link javax.inject.Inject}.
+     * constructor is found that is annotated with either {@link io.micronaut.core.annotation.Creator} or {@link AnnotationUtil#INJECT}.
      *
      * @return The primary constructor if one is present
      */
@@ -213,15 +225,15 @@ public interface ClassElement extends TypedElement {
             return Optional.of(constructors.get(0));
         }
         Optional<ConstructorElement> annotatedConstructor = constructors.stream()
-            .filter(c -> c.hasStereotype(AnnotationUtil.INJECT) || c.hasStereotype(Creator.class))
-            .findFirst();
+                .filter(c -> c.hasStereotype(AnnotationUtil.INJECT) || c.hasStereotype(Creator.class))
+                .findFirst();
         if (annotatedConstructor.isPresent()) {
             return annotatedConstructor.map(c -> c);
         }
         return constructors.stream()
-            .filter(io.micronaut.inject.ast.Element::isPublic)
-            .<MethodElement>map(c -> c)
-            .findFirst();
+                .filter(io.micronaut.inject.ast.Element::isPublic)
+                .<MethodElement>map(c -> c)
+                .findFirst();
     }
 
     /**
@@ -240,8 +252,8 @@ public interface ClassElement extends TypedElement {
             return Optional.empty();
         }
         List<ConstructorElement> constructors = getAccessibleConstructors()
-            .stream()
-            .filter(ctor -> ctor.getParameters().length == 0).toList();
+                .stream()
+                .filter(ctor -> ctor.getParameters().length == 0).toList();
         if (constructors.isEmpty()) {
             return Optional.empty();
         }
@@ -249,9 +261,9 @@ public interface ClassElement extends TypedElement {
             return Optional.of(constructors.get(0));
         }
         return constructors.stream()
-            .filter(Element::isPublic)
-            .<MethodElement>map(c -> c)
-            .findFirst();
+                .filter(Element::isPublic)
+                .<MethodElement>map(c -> c)
+                .findFirst();
 
     }
 
@@ -271,7 +283,7 @@ public interface ClassElement extends TypedElement {
         }
         //Can be multiple static @Creator methods. Prefer one with args here. The no arg method (if present) will
         //be picked up by findDefaultStaticCreator
-        List<MethodElement> withArgs = staticCreators.stream().filter(method -> method.getParameters().length > 0).collect(Collectors.toList());
+        List<MethodElement> withArgs = staticCreators.stream().filter(method -> method.getParameters().length > 0).toList();
         if (withArgs.size() == 1) {
             return Optional.of(withArgs.get(0));
         } else {
@@ -284,13 +296,14 @@ public interface ClassElement extends TypedElement {
      * Find and return a single default static creator. A default static creator is one
      * without arguments that is accessible.
      * *
+     *
      * @return a static creator
      * @since 4.0.0
      */
     default Optional<MethodElement> findDefaultStaticCreator() {
         List<MethodElement> staticCreators = getAccessibleStaticCreators()
-            .stream()
-            .filter(c -> c.getParameters().length == 0).toList();
+                .stream()
+                .filter(c -> c.getParameters().length == 0).toList();
         if (staticCreators.isEmpty()) {
             return Optional.empty();
         }
@@ -309,9 +322,9 @@ public interface ClassElement extends TypedElement {
     @NonNull
     default List<ConstructorElement> getAccessibleConstructors() {
         return getEnclosedElements(ElementQuery.CONSTRUCTORS)
-            .stream()
-            .filter(ctor -> !ctor.isPrivate())
-            .collect(Collectors.toList());
+                .stream()
+                .filter(ctor -> !ctor.isPrivate())
+                .toList();
     }
 
     /**
@@ -325,23 +338,23 @@ public interface ClassElement extends TypedElement {
     @NonNull
     default List<MethodElement> getAccessibleStaticCreators() {
         List<MethodElement> creators = getEnclosedElements(ElementQuery.ALL_METHODS
-            .onlyDeclared()
-            .onlyStatic()
-            .onlyAccessible()
-            .annotated(annotationMetadata -> annotationMetadata.hasStereotype(Creator.class))
-        )
-            .stream()
-            .filter(method -> method.getReturnType().isAssignable(this))
-            .collect(Collectors.toList());
-        if (creators.isEmpty() && isEnum()) {
-            return getEnclosedElements(ElementQuery.ALL_METHODS
-                .named("valueOf")
+                .onlyDeclared()
                 .onlyStatic()
                 .onlyAccessible()
-            )
+                .annotated(annotationMetadata -> annotationMetadata.hasStereotype(Creator.class))
+        )
                 .stream()
                 .filter(method -> method.getReturnType().isAssignable(this))
-                .collect(Collectors.toList());
+                .toList();
+        if (creators.isEmpty() && isEnum()) {
+            return getEnclosedElements(ElementQuery.ALL_METHODS
+                    .named("valueOf")
+                    .onlyStatic()
+                    .onlyAccessible()
+            )
+                    .stream()
+                    .filter(method -> method.getReturnType().isAssignable(this))
+                    .toList();
         }
         return creators;
     }
@@ -577,7 +590,7 @@ public interface ClassElement extends TypedElement {
      */
     @Experimental
     default ClassElement foldBoundGenericTypes(@NonNull Function<ClassElement, ClassElement> fold) {
-        List<ClassElement> typeArgs = getBoundGenericTypes().stream().map(arg -> arg.foldBoundGenericTypes(fold)).collect(Collectors.toList());
+        List<ClassElement> typeArgs = getBoundGenericTypes().stream().map(arg -> arg.foldBoundGenericTypes(fold)).toList();
         if (typeArgs.contains(null)) {
             typeArgs = Collections.emptyList();
         }
@@ -591,8 +604,10 @@ public interface ClassElement extends TypedElement {
      * @return The type arguments for this class element
      * @since 1.1.1
      */
-    default @NonNull Map<String, ClassElement> getTypeArguments(@NonNull String type) {
-        return Collections.emptyMap();
+    @NonNull
+    default Map<String, ClassElement> getTypeArguments(@NonNull String type) {
+        ArgumentUtils.requireNonNull("type", type);
+        return getAllTypeArguments().getOrDefault(type, Collections.emptyMap());
     }
 
     /**
@@ -601,7 +616,8 @@ public interface ClassElement extends TypedElement {
      * @param type The type to retrieve type arguments for
      * @return The type arguments for this class element
      */
-    default @NonNull Map<String, ClassElement> getTypeArguments(@NonNull Class<?> type) {
+    @NonNull
+    default Map<String, ClassElement> getTypeArguments(@NonNull Class<?> type) {
         ArgumentUtils.requireNonNull("type", type);
         return getTypeArguments(type.getName());
     }
@@ -609,7 +625,8 @@ public interface ClassElement extends TypedElement {
     /**
      * @return The type arguments for this class element
      */
-    default @NonNull Map<String, ClassElement> getTypeArguments() {
+    @NonNull
+    default Map<String, ClassElement> getTypeArguments() {
         return Collections.emptyMap();
     }
 
@@ -619,8 +636,15 @@ public interface ClassElement extends TypedElement {
      *
      * @return The type arguments for this class element
      */
-    default @NonNull Map<String, Map<String, ClassElement>> getAllTypeArguments() {
-        return Collections.emptyMap();
+    @NonNull
+    default Map<String, Map<String, ClassElement>> getAllTypeArguments() {
+        Map<String, Map<String, ClassElement>> result = new LinkedHashMap<>();
+        Stream.concat(
+                getInterfaces().stream(),
+                getSuperType().stream()
+        ).map(ClassElement::getAllTypeArguments).forEach(result::putAll);
+        result.put(getName(), getTypeArguments());
+        return result;
     }
 
     /**
@@ -668,8 +692,8 @@ public interface ClassElement extends TypedElement {
      * @param type The type of the bean
      * @return A bean builder
      */
-    default @NonNull
-    BeanElementBuilder addAssociatedBean(@NonNull ClassElement type) {
+    @NonNull
+    default BeanElementBuilder addAssociatedBean(@NonNull ClassElement type) {
         throw new UnsupportedOperationException("Element of type [" + getClass() + "] does not support adding associated beans at compilation time");
     }
 
@@ -695,9 +719,10 @@ public interface ClassElement extends TypedElement {
      * @param type The type
      * @return The class element
      */
-    static @NonNull ClassElement of(@NonNull Class<?> type) {
+    @NonNull
+    static ClassElement of(@NonNull Class<?> type) {
         return new ReflectClassElement(
-            Objects.requireNonNull(type, "Type cannot be null")
+                Objects.requireNonNull(type, "Type cannot be null")
         );
     }
 
@@ -711,14 +736,13 @@ public interface ClassElement extends TypedElement {
     @NonNull
     static ClassElement of(@NonNull Type type) {
         Objects.requireNonNull(type, "Type cannot be null");
-        if (type instanceof Class) {
-            return new ReflectClassElement((Class<?>) type);
-        } else if (type instanceof TypeVariable<?>) {
-            return new ReflectGenericPlaceholderElement((TypeVariable<?>) type, 0);
-        } else if (type instanceof WildcardType) {
-            return new ReflectWildcardElement((WildcardType) type);
-        } else if (type instanceof ParameterizedType) {
-            ParameterizedType pType = (ParameterizedType) type;
+        if (type instanceof Class<?> aClass) {
+            return new ReflectClassElement(aClass);
+        } else if (type instanceof TypeVariable<?> typeVariable) {
+            return new ReflectGenericPlaceholderElement(typeVariable, 0);
+        } else if (type instanceof WildcardType wildcardType) {
+            return new ReflectWildcardElement(wildcardType);
+        } else if (type instanceof ParameterizedType pType) {
             if (pType.getOwnerType() != null) {
                 throw new UnsupportedOperationException("Owner types are not supported");
             }
@@ -727,12 +751,12 @@ public interface ClassElement extends TypedElement {
                 @Override
                 public List<? extends ClassElement> getBoundGenericTypes() {
                     return Arrays.stream(pType.getActualTypeArguments())
-                        .map(ClassElement::of)
-                        .collect(Collectors.toList());
+                            .map(ClassElement::of)
+                            .toList();
                 }
             };
-        } else if (type instanceof GenericArrayType) {
-            return of(((GenericArrayType) type).getGenericComponentType()).toArray();
+        } else if (type instanceof GenericArrayType genericArrayType) {
+            return of(genericArrayType.getGenericComponentType()).toArray();
         } else {
             throw new IllegalArgumentException("Bad type: " + type.getClass().getName());
         }
@@ -747,14 +771,14 @@ public interface ClassElement extends TypedElement {
      * @return The class element
      * @since 2.4.0
      */
-    static @NonNull ClassElement of(
-        @NonNull Class<?> type,
-        @NonNull AnnotationMetadata annotationMetadata,
-        @NonNull Map<String, ClassElement> typeArguments) {
+    @NonNull
+    static ClassElement of(@NonNull Class<?> type,
+                           @NonNull AnnotationMetadata annotationMetadata,
+                           @NonNull Map<String, ClassElement> typeArguments) {
         Objects.requireNonNull(annotationMetadata, "Annotation metadata cannot be null");
         Objects.requireNonNull(typeArguments, "Type arguments cannot be null");
         return new ReflectClassElement(
-            Objects.requireNonNull(type, "Type cannot be null")
+                Objects.requireNonNull(type, "Type cannot be null")
         ) {
             @Override
             public AnnotationMetadata getAnnotationMetadata() {
@@ -770,8 +794,8 @@ public interface ClassElement extends TypedElement {
             @Override
             public List<? extends ClassElement> getBoundGenericTypes() {
                 return getDeclaredGenericPlaceholders().stream()
-                    .map(tv -> typeArguments.get(tv.getVariableName()))
-                    .collect(Collectors.toList());
+                        .map(tv -> typeArguments.get(tv.getVariableName()))
+                        .toList();
             }
         };
     }
@@ -783,7 +807,8 @@ public interface ClassElement extends TypedElement {
      * @return The class element
      */
     @Internal
-    static @NonNull ClassElement of(@NonNull String typeName) {
+    @NonNull
+    static ClassElement of(@NonNull String typeName) {
         return new SimpleClassElement(typeName);
     }
 
@@ -796,7 +821,8 @@ public interface ClassElement extends TypedElement {
      * @return The class element
      */
     @Internal
-    static @NonNull ClassElement of(@NonNull String typeName, boolean isInterface, @Nullable AnnotationMetadata annotationMetadata) {
+    @NonNull
+    static ClassElement of(@NonNull String typeName, boolean isInterface, @Nullable AnnotationMetadata annotationMetadata) {
         return new SimpleClassElement(typeName, isInterface, annotationMetadata);
     }
 
@@ -810,7 +836,8 @@ public interface ClassElement extends TypedElement {
      * @return The class element
      */
     @Internal
-    static @NonNull ClassElement of(@NonNull String typeName, boolean isInterface, @Nullable AnnotationMetadata annotationMetadata, Map<String, ClassElement> typeArguments) {
+    @NonNull
+    static ClassElement of(@NonNull String typeName, boolean isInterface, @Nullable AnnotationMetadata annotationMetadata, Map<String, ClassElement> typeArguments) {
         return new SimpleClassElement(typeName, isInterface, annotationMetadata);
     }
 }
